# ChangeLog for sys-apps/hal
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.4 2004/09/20 22:58:00 foser Exp $

*hal-0.2.98 (21 Sep 2004)

  21 Sep 2004; foser <foser@gentoo.org> hal-0.2.98.ebuild :
  New release, fix up the init script to work with the new pid handling
  Update dbus dep to keep hal-dev-manager working
  Add libcap dep

  18 Sep 2004; Travis Tilley <lv@gentoo.org> hal-0.2.97.ebuild:
  added ~amd64 keyword

  30 Aug 2004; David Holm <dholm@gentoo.org> hal-0.2.97.ebuild:
  Added to ~ppc.

*hal-0.2.97 (17 Aug 2004)

  17 Aug 2004; foser <foser@gentoo.org> hal-0.2.97.ebuild, metadata.xml, Changelog :
  Initial commit of hal (Hardware Abstraction Layer), a layer on top of udev to get hardware info
  Added init script for Gentoo
  Added to the gnome herd for now, maintained by foser <foser@gentoo.org>
