@@ -1,5 +1,5 @@
-MD5 7ff8e4f8281c8ba67398557c20fad8da hal-0.2.98.ebuild 1927
-MD5 6df3f6bf9050de6828dfe5bbec52e17f ChangeLog 909
+MD5 3bb693df02d9dda8e7fd239ae41137a9 hal-0.2.98.ebuild 1955
+MD5 6ffb5ab362f65f554d46413e38e410d9 ChangeLog 1034
 MD5 731695e9263a5a2e1eeba290b36078d5 metadata.xml 219
 MD5 18d89d8976e9422f0ee10e92d8e7885f hal-0.2.97.ebuild 1745
 MD5 b220e30fa677e5589866474f1f362ffa files/hald 548
